...
        android:name="com.example.foodie.views.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">

        <!-- Action to LoginFragment -->
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@+id/loginFragment" />
    </fragment>


    <!-- Menu Fragment -->
    <fragment
...
